<resources>
    <string name="app_name">LearnGermanWithNavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_learn">LearnActivity</string>
    <string name="win_text">Победа!</string>
    <string name="lose_text">Позор!</string>
    <string name="score_text">Счёт:</string>
    <string name="title_activity_to_delete">ToDeleteActivity</string>
    <string name="add_a_new_Word">Добавить новое слово в словарь</string>
    <string name="yes">Да</string>
    <string name="enter_new_word">Введите новое слово</string>
    <string name="enter_translate">Введите перевод</string>
    <string name="ok">Ok</string>
    <string name="errorAddNewWord">Введите слово</string>
    <string name="errorAddNewTranslate">Введите корректный перевод</string>
    <string name="translate_direction">Направление перевода</string>
    <string name="enter_your_name">Введите своё имя</string>
    <string name="your_name">Ваше имя</string>
    <string name="select_modules">Выберите подключаемые модули</string>
    <string name="modules">Модули</string>
    <string name="animals">Животные</string>
    <string name="most_200_words">200 слов</string>
    <string name="my_words">Мои слова</string>
    <string name="direct_direction">Прямое направление</string>
    <string name="back_direction">Обратное направление</string>
    <string name="choice_difficult">Выберите уровень сложности</string>
    <string name="difficult_level">Уровень сложности</string>
    <string name="alarm">Внимание!</string>
    <string name="low_size_of_array">Недостаточно слов в модуле. Выберите другой модуль</string>
    <string-array name="difficult">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
</resources>
